# airflow-demo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dags/01_basics/: airflow_demo.py  xcom_demo.py
dags/02_etl/: csv_to_warehouse.py  data_quality.py
dags/03_orchestration/: branching_and_joins.py  cross_dag_consumer.py  cross_dag_producer.py  dynamic_dag_generation.py
dags/04_resilience/: retry_and_callbacks.py  sensor_patterns.py
dags/05_advanced/: hooks_and_connections.py  taskflow_and_custom_ops.py
docs/: design_decisions.md  honcho.md  patterns.md  taocp_applications.md
include/: __init__.py
include/data/: customers.csv  orders.csv  products.csv
include/domain/: __init__.py
include/io/: __init__.py
include/transforms/: __init__.py
plugins/operators/: greet_operator.py
tests/dags/: test_dag_integrity.py
tests/e2e/: test_ui.py
tests/unit/: test_app.py  test_cleaning.py  test_extractor.py  test_io.py  test_ports.py  test_records.py
web/: README.md  app.py  extractor.py  ports.py
web/static/: style.css
web/templates/: about.html  base.html  dag.html  index.html  system.html
